Prevent scrollbar from moving the content of the page and some more styling changes

--- a/resources/sass/_dashboard.scss
+++ b/resources/sass/_dashboard.scss
@@ -7,7 +7,7 @@
     }
 
     .content {
-        padding-left: 75px;
+        padding: 0 100px;
 
         @media (min-width: 576px) {
             .card-columns {
